--- a/datacollection/user_app/backend/info_files/db_versions/v_3/Spicy Tuna Avocado Wraps.yaml
+++ b/datacollection/user_app/backend/info_files/db_versions/v_3/Spicy Tuna Avocado Wraps.yaml
@@ -357,6 +357,8 @@
     tag: Missing Step
   - description: top-top lettuce leaves with the tuna mixture
     tag: Missing Step
+  - description: place-place avocado slices on each leaf
+    tag: Missing Step
   id: '28_26'
   is_error: true
   recorded_by: 1
@@ -412,11 +414,6 @@
     - description: Spill while mixing the contents with a whisker
       tag: Technique Error
     modified_description: Whisk-Whisk the contents of the bowl
-  - description: place-place avocado slices on each leaf
-    errors:
-    - description: 'Miss this step '
-      tag: Missing Step
-    modified_description: '[]'
   - description: Season-season 1/4 tsp pepper on the bowl
   - description: Season-Season bowl with 1/4 tsp salt
   - description: Roll-Roll up the lettuce wraps
@@ -426,13 +423,6 @@
     modified_description: Roll-Roll up the lettuce wraps to spill the inside contents
       outside
   - description: secure-secure the wrap with a toothpick
-    errors:
-    - description: NONE
-      tag: Timing Error
-    - description: NONE
-      tag: Temperature Error
-    - description: NONE
-      tag: Preparation Error
 - activity_id: 28
   environment: 1
   errors:
@@ -440,6 +430,7 @@
     tag: Missing Step
   - description: Mix-Mix the contents of the bowl
     tag: Missing Step
+  - description: Season-Season bowl with 1/4 tsp salt
   id: '28_28'
   is_error: true
   recorded_by: 7
@@ -485,13 +476,13 @@
     errors:
     - description: leave some water remaining
       tag: Preparation Error
-    modified_description: ' drain-drain excess water from can, but  leave some water
-      remaining'
+    modified_description: drain-drain excess water from can, but  leave some water
+      remaining
   - description: Add-1/4 cup mayonnaise to the bowl
     errors:
     - description: 1/2 instead of 1/4 cup
       tag: Measurement Error
-    modified_description: ' Add-1/2 cup mayonnaise to the bowl'
+    modified_description: Add-1/2 cup mayonnaise to the bowl
   - description: Add-1 tsp Sriracha sauce to the bowl
     errors:
     - description: Splashing some sauce
@@ -501,22 +492,12 @@
   - description: place-place avocado slices on each leaf
     errors:
     - description: Just put on one leaf
-      tag: Technique Error
+      tag: Measurement Error
     modified_description: place-place avocado slices on just one leaf
   - description: Season-season 1/4 tsp pepper on the bowl
-  - description: Season-Season bowl with 1/4 tsp salt
-    errors:
-    - description: Missing step
-      tag: Missing Step
-    modified_description: Not do this step
   - description: top-top lettuce leaves with the tuna mixture
   - description: Roll-Roll up the lettuce wraps
   - description: secure-secure the wrap with a toothpick
-    errors:
-    - description: 'null'
-      tag: Temperature Error
-    - description: 'null'
-      tag: Timing Error
 - activity_id: 28
   environment: 5
   errors:
@@ -560,7 +541,7 @@
   - description: drain-drain excess water from can
     errors:
     - description: remain some water
-      tag: Technique Error
+      tag: Preparation Error
     modified_description: drain-drain excess water from can, but remain some water
   - description: Add-add chopped scallion to the bowl
   - description: cut-cut avocado into thin slices
@@ -571,7 +552,7 @@
   - description: place-place avocado slices on each leaf
     errors:
     - description: place on just one leaf
-      tag: Technique Error
+      tag: Measurement Error
     modified_description: place-place avocado slices on just one leaf
   - description: Add-1/4 cup mayonnaise to the bowl
     errors:
@@ -582,8 +563,8 @@
     errors:
     - description: Splash some contents outside
       tag: Technique Error
-    modified_description: 'Mix-Mix the contents of the bowl, but splash some of them
-      outside '
+    modified_description: Mix-Mix the contents of the bowl, but splash some of them
+      outside
   - description: Season-Season bowl with 1/4 tsp salt
     errors:
     - description: 1 instead of 1/4 tsp
@@ -592,11 +573,6 @@
   - description: Season-season 1/4 tsp pepper on the bowl
   - description: Add-Add 1 can drained tuna to the bowl
   - description: top-top lettuce leaves with the tuna mixture
-    errors:
-    - description: 'Null'
-      tag: Temperature Error
-    - description: 'Null'
-      tag: Timing Error
 - activity_id: 28
   environment: 6
   errors:
@@ -634,7 +610,7 @@
   - description: Open-Open a can of tuna
     errors:
     - description: Didn't open the can of Tuna.
-      tag: Technique Error
+      tag: Preparation Error
     modified_description: Take-Take a can of tuna and don't open it.
   - description: Add-1 tsp Sriracha sauce to the bowl
   - description: Chop-Chop 1 scallion
@@ -648,12 +624,14 @@
     errors:
     - description: Didn't wash the lettuce leaves and the leaves are not large.
       tag: Preparation Error
+    - description: Didn't wash the lettuce leaves and the leaves are not large.
+      tag: Measurement Error
     modified_description: Lay-Lay out 2 improper lettuce leaves without washing them.
   - description: cut-cut avocado into thin slices
   - description: drain-drain excess water from can
     errors:
     - description: Didn't drain the excess water as the can is not opened.
-      tag: Technique Error
+      tag: Preparation Error
     modified_description: Wash-Wash the Tuna can.
   - description: top-top lettuce leaves with the mixture
   - description: place-place avocado slices on each leaf
@@ -702,7 +680,7 @@
   - description: Open-Open a can of tuna
     errors:
     - description: Not opening the can using a can opener but with a knife
-      tag: Technique Error
+      tag: Preparation Error
     modified_description: Open-Open a can of tuna using a knife while puncturing hole
       at the center of the can
   - description: Chop-Chop 1 scallion
@@ -751,9 +729,6 @@
       tag: Technique Error
     modified_description: Roll-Spill outside while rolling up the lettuce wraps
   - description: secure-secure the wrap with a toothpick
-    errors:
-    - description: 'NULL'
-      tag: Temperature Error
 - activity_id: 28
   environment: 2
   errors:
@@ -795,7 +770,7 @@
   - description: Open-Open a can of tuna
   - description: Add-1/4 cup mayonnaise to the bowl
     errors:
-    - description: 1/2 instead if 1./4
+    - description: 1/2 instead if 1/4
       tag: Measurement Error
     modified_description: Add-1/2 cup mayonnaise to the bowl
   - description: Add-add chopped scallion to the bowl
@@ -822,7 +797,7 @@
   - description: place-place avocado slices on each leaf
     errors:
     - description: place on only one leaf
-      tag: Preparation Error
+      tag: Measurement Error
     modified_description: place-place avocado slices on one leaf
   - description: Lay-Lay out 2 large lettuce leaves
   - description: Add-Add 1 can drained tuna to the bowl
@@ -830,11 +805,6 @@
   - description: Season-Season bowl with 1/4 tsp salt
   - description: top-top lettuce leaves with the tuna mixture
   - description: Roll-Roll up the lettuce wraps
-    errors:
-    - description: 'Null'
-      tag: Timing Error
-    - description: 'Null'
-      tag: Temperature Error
 - activity_id: 28
   environment: 2
   errors:
@@ -874,30 +844,26 @@
   - description: Chop-Chop 1 scallion
     errors:
     - description: 1/2 scallion
-      tag: Preparation Error
-    - description: 1/2 scallion
       tag: Measurement Error
-    - description: 1/2 scallion
+    - description: cut 1/2 scallion instead of chop
       tag: Technique Error
-    - description: 1/2 scallion
-      tag: Temperature Error
     modified_description: Cut 1/2 scallion
   - description: drain-drain excess water from can
     errors:
     - description: not all water
-      tag: Technique Error
+      tag: Preparation Error
     - description: half water
       tag: Timing Error
     modified_description: drain half excess water from can
   - description: Add-1 tsp Sriracha sauce to the bowl
   - description: cut-cut avocado into thin slices
     errors:
-    - description: thick slices
-      tag: Technique Error
+    - description: thick slices instead of thin slices
+      tag: Measurement Error
     modified_description: cut avocado into thin slices
   - description: Add-Add 1 can drained tuna to the bowl
     errors:
-    - description: cup
+    - description: cup instead of bowl
       tag: Preparation Error
     modified_description: Add 1 can drained tuna to the cup
   - description: Add-1/4 cup mayonnaise to the bowl
@@ -905,7 +871,7 @@
   - description: Mix-Mix the contents of the bowl
   - description: Season-Season bowl with 1/4 tsp salt
     errors:
-    - description: 1/2 tsp salt
+    - description: 1/2 tsp salt instead of 1/4 tsp
       tag: Measurement Error
     modified_description: Season-Season bowl with 1/2 tsp salt
   - description: Lay-Lay out 2 large lettuce leaves
@@ -956,21 +922,21 @@
     errors:
     - description: Using tablespoon instead of teaspoon.
       tag: Measurement Error
-    modified_description: ' Add-Add 1 tbsp Sriracha sauce to the bowl.'
+    modified_description: Add-Add 1 tbsp Sriracha sauce to the bowl.
   - description: Add-Add 1 can tuna in a bowl
     errors:
     - description: Spill some tuna while adding.
-      tag: Preparation Error
+      tag: Technique Error
     modified_description: Add-Add 1 can tuna in a bowl and spill some on countertop.
   - description: Mix-Mix the contents of the bowl
     errors:
     - description: While mixing spilling some of the contents.
-      tag: Preparation Error
+      tag: Technique Error
     modified_description: Mix-Mix the contents of the bowl and spill while mixing.
   - description: cut-cut avocado into thin slices
     errors:
     - description: Instead of thin slices cutting into thick slices.
-      tag: Technique Error
+      tag: Measurement Error
     modified_description: Cut-Cut avocado into thick slices.
   - description: Chop-Chop 1 scallion
   - description: place-place avocado slices on each leaf
@@ -986,12 +952,6 @@
       tag: Technique Error
     modified_description: Roll-Roll up the lettuce wraps and spill while rolling.
   - description: secure-secure the wrap with a toothpick
-    errors:
-    - description: 'NULL'
-      tag: Temperature Error
-    - description: 'NULL'
-      tag: Timing Error
-    modified_description: ' Secure-Secure the wrap with a toothpick.'
 - activity_id: 28
   environment: 1
   errors:
@@ -1029,7 +989,7 @@
   - description: Open-Open a can of tuna
     errors:
     - description: Spill while opening.
-      tag: Preparation Error
+      tag: Technique Error
     modified_description: Open-Open a can of tuna spilling contents.
   - description: Add-1 tsp Sriracha sauce to the bowl
     errors:
@@ -1040,8 +1000,8 @@
     errors:
     - description: Not draining the excess water and leaving some water behind.
       tag: Preparation Error
-    modified_description: ' Drain-Drain excess water from can and leave some water
-      behind.'
+    modified_description: Drain-Drain excess water from can and leave some water
+      behind.
   - description: Take-Take 1 ripe avocado
     errors:
     - description: Taking a non-ripen avocado instead of ripen avocado.
@@ -1050,7 +1010,7 @@
   - description: cut-cut avocado into thin slices
     errors:
     - description: Cutting into thick slices contrary to cutting into thin slices.
-      tag: Technique Error
+      tag: Measurement Error
     modified_description: Cut-Cut avocado into thick slices
   - description: Add-Add 1 can drained tuna to the bowl
     errors:
@@ -1060,7 +1020,7 @@
   - description: Mix-Mix the contents of the bowl
     errors:
     - description: Spill while mixing the contents.
-      tag: Preparation Error
+      tag: Technique Error
     modified_description: Mix-Mix the contents of the bowl and spill while mixing.
   - description: top-top lettuce leaves with the tuna mixture
     errors:
@@ -1077,7 +1037,7 @@
   - description: place-place avocado slices on each leaf
     errors:
     - description: place only on one leaf.
-      tag: Other
+      tag: Measurement Error
     modified_description: Place-Place avocado slices only on one leaf.
   - description: Roll-Roll up the lettuce wraps
     errors:
@@ -1085,9 +1045,3 @@
       tag: Technique Error
     modified_description: Roll-Roll up the lettuce wraps and spill while rolling.
   - description: secure-secure the wrap with a toothpick
-    errors:
-    - description: 'NULL'
-      tag: Temperature Error
-    - description: 'NULL'
-      tag: Timing Error
-    modified_description: Secure-Secure the wrap with a toothpick
