Recording Data Summarization

--- a/datacollection/user_app/backend/info_files/environments.yaml
+++ b/datacollection/user_app/backend/info_files/environments.yaml
@@ -52,6 +52,15 @@
     - id: 8
       username: vasundhara
       environment_name: akshay
+- id: 3
+  name: krishna
+  users:
+    - id: 1
+      username: rohith
+      environment_name: krishna
+    - id: 3
+      username: bharath
+      environment_name: krishna
 - id: 5
   name: shivvrat
   users:
@@ -118,6 +127,18 @@
     - id: 8
       username: vasundhara
       environment_name: vasundhara
+- id: 8
+  name: prathyush
+  users:
+    - id: 1
+      username: rohith
+      environment_name: prathyush
+    - id: 3
+      username: bharath
+      environment_name: prathyush
+    - id: 4
+      username: likhitha
+      environment_name: prathyush
 - id: 9
   name: qifan
   users:
