--- a/datacollection/user_app/backend/info_files/db_versions/v_3/Spicy Tuna Avocado Wraps.yaml
+++ b/datacollection/user_app/backend/info_files/db_versions/v_3/Spicy Tuna Avocado Wraps.yaml
@@ -431,6 +431,7 @@
   - description: Mix-Mix the contents of the bowl
     tag: Missing Step
   - description: Season-Season bowl with 1/4 tsp salt
+    tag: Missing Step
   id: '28_28'
   is_error: true
   recorded_by: 7
